--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
     <div class="black" style="background-color: white; display: inline-block;">
         <div class="card">
+            <div class="mid">
+                <div class="unocirc"></div>
+            </div>
+            <div class="diag"></div>
+        </div>
+
+        <div class="card">
             <div class="e tl"><div>
                 +4
             </div></div>
@@ -101,13 +108,13 @@
 
     <div class="card">
         <div class="e tl"><div>
-            0
+            O
         </div></div>
         <div class="e br"><div>
-            0
+            O
         </div></div>
         <div class="mid">
-            0
+            O
         </div>
         <div class="diag"></div>
     </div>
