--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <defs>
             <g id="tarr">
                 <path d="M 10 51 L 10 42 A 12 12 0 0 1 22 30 L 85 30" stroke="white" stroke-linecap="round" fill="none" />
-                <path d="M 90 30 l -20 -20 M 90 30 l -20 2un0" stroke="white" stroke-linecap="round" fill="none" />
+                <path d="M 90 30 l -20 -20 M 90 30 l -20 20" stroke="white" stroke-linecap="round" fill="none" />
             </g>
         </defs>
     </svg>
