--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body class="green" onclick="void (body.classList.remove('red', 'green', 'blue', 'yellow')) || body.classList.add(['red', 'green', 'blue', 'yellow'][Math.floor(Math.random() * 4)])">
-
+    <iframe style="background-color: white; width: 100%;" src="README.md"></iframe>
+    
     <svg style="display: none;">
         <defs>
             <g id="tarr">
