Add link to GH project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script>
         (async () => document.getElementById('markdowninfo').innerHTML = markdownit().render(await (await fetch('README.md')).text()))();
     </script>
+
+    <a href="http://github.com/N2D4/uno-minimalista-fake">GitHub project</a>
     
     <svg style="display: none;">
         <defs>
