--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151064305-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-151064305-1');
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/10.0.0/markdown-it.js"></script>
 </head>
 <body class="green" onclick="void (body.classList.remove('red', 'green', 'blue', 'yellow')) || body.classList.add(['red', 'green', 'blue', 'yellow'][Math.floor(Math.random() * 4)])">
